--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -20,9 +20,11 @@ jobs:
 
     - name: Install dependencies
       run: npm install
+      working-directory: ./  # Ensure this points to the correct directory
 
     - name: Build the site
       run: npm run build
+      working-directory: ./  # Ensure this points to the correct directory
 
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
